# fcp-project

./: CMakeLists.txt  main  main.cpp
docs/: Doxyfile
docs/html/: accounts_8h.html  accounts_8h.js  accounts_8h_source.html  annotated.html  annotated_dup.js  choosing__operation_8h.html  choosing__operation_8h.js  choosing__operation_8h_source.html  class_account-members.html  class_account.html  class_user-members.html  class_user.html  classes.html  creating__accounts__handler_8h.html  creating__accounts__handler_8h.js  creating__accounts__handler_8h_source.html  database__manager_8h.html  database__manager_8h.js  database__manager_8h_source.html  deposit__and__withdraw__handler_8h.html  deposit__and__withdraw__handler_8h.js  deposit__and__withdraw__handler_8h_source.html  dir_2ccb7041787ee5a778d64e6bbb7bfffc.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_e7b75baa352c95a16f2983fc030b1be0.html  dir_f89abcb304c928c7d889aa5625570de5.html  doxygen_crawl.html  files.html  globals.html  globals_func.html  globals_vars.html  index.html  logging__handler_8h.html  logging__handler_8h.js  logging__handler_8h_source.html  main_8cpp.html  navtreedata.js  navtreeindex0.js
docs/latex/: accounts_8h.tex  accounts_8h_source.tex  annotated.tex  choosing__operation_8h.tex  choosing__operation_8h_source.tex  (+13 more)
include/: accounts.h  choosing_operation.h  creating_accounts_handler.h  database_manager.h  deposit_and_withdraw_handler.h  logging_handler.h
json_files/: accounts.json  user_accounts.json
(+22 files in other folders)
